--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.468.0",
-    "next": "15.1.0",
+    "next": "^16.1.1",
     "openai": "^4.76.3",
     "p-limit": "^6.1.0",
     "react": "^19.0.0",
@@ -37,7 +37,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "^16.1.1",
     "postcss": "^8.4.49",
     "shadcn-ui": "^0.9.4",
     "tailwindcss": "^3.4.16",
